id can now store not only int