@@ -21,21 +21,20 @@ public class JsonStore {
     }
 
     public void save(Object obj) throws Exception {
-
         Field idField = findIdField(obj.getClass());
         idField.setAccessible(true);
-        int id = (int) idField.get(obj);
+        Object id = idField.get(obj);
+
         String fileName = getFileName(obj.getClass());
-
         File file = new File(fileName);
-        Map<String, JsonNode> storage = new HashMap<>();
 
+        Map<String, Object> storage = new HashMap<>();
         if (file.exists()) {
             storage = mapper.readValue(file, Map.class);
         }
 
         JsonNode jsonNode = serializeObject(obj);
-        storage.put(String.valueOf(id), jsonNode);
+        storage.put(String.valueOf(id), jsonNode); // Преобразуем любой тип в строку
 
         try (FileOutputStream fos = new FileOutputStream(file)) {
             mapper.writeValue(fos, storage);
@@ -51,7 +50,7 @@ public class JsonStore {
         throw new IllegalArgumentException("No @Id field found in class " + type.getName());
     }
 
-    public <T> List<T> loadById(Class<T> type, int id) throws Exception {
+    public <T, ID> List<T> loadById(Class<T> type, ID id) throws Exception {
         if (!type.isAnnotationPresent(Persistent.class)) {
             throw new IllegalArgumentException("Not a @Persistent class");
         }
@@ -60,8 +59,7 @@ public class JsonStore {
         File file = new File(fileName);
         if (!file.exists()) return Collections.emptyList();
 
-        Map storage = mapper.readValue(file, Map.class);
-        System.out.println(storage);
+        Map<String, Object> storage = mapper.readValue(file, Map.class);
         JsonNode jsonNode = mapper.valueToTree(storage.get(String.valueOf(id)));
         if (jsonNode == null) return Collections.emptyList();
 
@@ -76,8 +74,10 @@ public class JsonStore {
         for (Field field : type.getDeclaredFields()) {
             if (field.isAnnotationPresent(Transient.class)) continue;
             field.setAccessible(true);
+
             String fieldName = field.isAnnotationPresent(FieldAlias.class) ?
                     field.getAnnotation(FieldAlias.class).value() : field.getName();
+
             Object value = field.get(obj);
 
             if (value != null && value.getClass().isAnnotationPresent(Persistent.class)) {
@@ -88,8 +88,10 @@ public class JsonStore {
                 map.put(fieldName, value);
             }
         }
+
         return mapper.valueToTree(map);
     }
+
 
     private <T> T deserializeObject(Class<T> type, JsonNode jsonNode) throws Exception {
         T instance = type.getDeclaredConstructor().newInstance();
@@ -103,7 +105,7 @@ public class JsonStore {
             if (valueNode != null) {
                 if (field.getType().isAnnotationPresent(Persistent.class)) {
                     List<?> refs = loadById(field.getType(), valueNode.asInt());
-                    if (!refs.isEmpty()) field.set(instance, refs.get(0));
+                    if (!refs.isEmpty()) field.set(instance, refs.getFirst());
                 } else {
                     field.set(instance, mapper.treeToValue(valueNode, field.getType()));
                 }
